
lib_LTLIBRARIES=libcgeneric_0.4.2.la
lib_LIBRARIES=libcgen.a

srcDIR = ../src
incDIR = ../include
INCLUDES = -I$(incDIR)

libcgeneric_0_4_2_la_SOURCES= \
	$(srcDIR)/binary_tree.c  \
	$(srcDIR)/conversions.c  \
	$(srcDIR)/deque.c  \
	$(srcDIR)/hashtable.c  \
	$(srcDIR)/heap.c  \
	$(srcDIR)/list.c  \
	$(srcDIR)/node.c  \
	$(srcDIR)/priority_queue.c  \
	$(srcDIR)/queue.c  \
	$(srcDIR)/stack.c  \
	$(srcDIR)/vector.c
libcgen_a_SOURCES = \
	$(srcDIR)/binary_tree.c  \
	$(srcDIR)/conversions.c  \
	$(srcDIR)/deque.c  \
	$(srcDIR)/hashtable.c  \
	$(srcDIR)/heap.c  \
	$(srcDIR)/list.c  \
	$(srcDIR)/node.c  \
	$(srcDIR)/priority_queue.c  \
	$(srcDIR)/queue.c  \
	$(srcDIR)/stack.c  \
	$(srcDIR)/vector.c



libcgeneric_0_4_2_la_libincludedir=$(includedir)
libcgeneric_0_4_2_la_libinclude_HEADERS = ../config.h

libcgeneric_0_4_2_la_CFLAGS=$(INTI_CFLAGS)
