INCLUDES = -I../include
AM_LDFLAGS = -L../lib
LDADD = -lcgen
bin_PROGRAMS = basevector_test binarytree_test closedhash_test dequelist_test dequevector_test heap_test list_test openhash_test prio_test queuelist_test queuevector_test stacklist_test stackvector_test vec_test vector_test
basevector_test_SOURCES = basevector_test.c
binarytree_test_SOURCES = binarytree_test.c
closedhash_test_SOURCES = closedhash_test.c
dequelist_test_SOURCES = dequelist_test.c
dequevector_test_SOURCES = dequevector_test.c
heap_test_SOURCES = heap_test.c
list_test_SOURCES = list_test.c
openhash_test_SOURCES = openhash_test.c
prio_test_SOURCES = prio_test.c
queuelist_test_SOURCES = queuelist_test.c
queuevector_test_SOURCES = queuevector_test.c
stacklist_test_SOURCES = stacklist_test.c
stackvector_test_SOURCES = stackvector_test.c
vec_test_SOURCES = vec_test.c
vector_test_SOURCES = vector_test.c
